[package]
name = "device-drivers"
version = "0.1.0"
authors = ["Anton Fedoseev <aranoy15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
heapless = "0.6"
nb = "1.0"

[dev-dependencies]
void = "1.0.2"

[lib]
doctest = false
